--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "16.2.12",
     "@angular/animations": "^16.2.0",
     "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.0",
@@ -30,9 +31,8 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.14",
-    "@angular/cli": "^16.2.16",
-    "@angular/compiler-cli": "^16.2.0",
+    "@angular/cli": "16.2.16",
+    "@angular/compiler-cli": "16.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -40,6 +40,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.6"
   }
 }
