--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.6",
+    "cors": "^2.8.5",
     "erp": "file:",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^19.0.2",
