--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "erp": "file:",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
